minor: fix versioned doc links

--- a/7.0.0-beta2/styles/etc.css
+++ b/7.0.0-beta2/styles/etc.css
@@ -73,7 +73,7 @@
    ========================================================================== */
 /* Special Case for /docs/arduino.html */
 li > p:first-child:last-child {
-	display: inline-block;
+	display: inline;
 }
 
 /* Special Case for footer */
